Bug 927031 - Use MPostWriteBarrier to postbarrier SetElementIC r=jandem